made reference variable working

--- a/CPPLS1/CPPLS1.vcxproj
+++ b/CPPLS1/CPPLS1.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="Number.cpp" />
     <ClCompile Include="OperationFactory.cpp" />
     <ClCompile Include="VariableAssignment.cpp" />
+    <ClCompile Include="VariableReference.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Backslash.h" />
@@ -161,6 +162,7 @@
     <ClInclude Include="Operation.h" />
     <ClInclude Include="OperationFactory.h" />
     <ClInclude Include="VariableAssignment.h" />
+    <ClInclude Include="VariableReference.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
